[tool.poetry]
name = "BMI_Calculator.py"
version = "0.1.0"
description = "A BMI Calculator program created on Day 2 of the python 100 days of code challenge"
authors = ["Cephas Cardozo"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"